@@ -314,8 +314,8 @@ The \fItoggle\fR and \fItoggle_verbatim\fR subcommands can be bound to a key to 
  \fBabort\fR          	leave multi\-line mode without sending the message
 
 .TP
-\fB/rename\fR nickname
-Rename current buddy to the given nickname\&. This command does not work for groups, at the moment (but you can move the buddies to another group with the "/move" command)\&.
+\fB/rename\fR name
+Rename current buddy or group to the given name\&. Please note that a group name change is only done when the server's acknowledgment is received, so a slight delay can be noticed\&.
 
 .TP
 \fB/request\fR time|version [jid]
