@@ -9,6 +9,7 @@ mcabber (0.7.7-dev)
  * New command "/buffer purge"
  * New commands "/buffer scroll_lock|scroll_unlock|scroll_toggle"
  * The commands /alias and /bind now list the defined aliases and key bindings
+ * Groups can now be renamed
  * Fix a small buddylist bug when receiving a subscription request
    (the buddylist wasn't always refreshed)
  * Fix a bug (hang) in the input line
